Remove unnecessary deps